Enigma/testing/error/wrongmessage.inp
* B BETA I II III AABC (BC) (DE)
ABCDSDC%